# ChangeLog for app-admin/eselect-emacs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Jun 2007; Ulrich Mueller <ulm@gentoo.org>
  +eselect-emacs-1.1_alpha2.ebuild:
  Version bump.

  22 Jun 2007; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
  +eselect-emacs-1.1_alpha1.ebuild:
  Copied from Portage tree. Add an eselect module for ctags, bug #29398.
