@@ -1,6 +1,4 @@
-DIST eselect-emacs-1.1_alpha1.tar.bz2 4382 RMD160 6faafb5852fd259939fe5f35979ff1f0cba77eee SHA1 745ec4399c07a0444cc113b2cce525de511ef43c SHA256 8844c3f0d0e0980fcd2827cff0fb088f941ce1291e5c0fa0a0a7934cd86353e0
-DIST eselect-emacs-1.1_alpha2.tar.bz2 4422 RMD160 dc74f0f118286742255aafcbb0abecfd1513a6f4 SHA1 f7e3718740c887e8c5c425b2347350f1332ecad0 SHA256 77c82f01b8b44b738d56683426d1717305ae1a504c9855f1c6c5e10057889944
-EBUILD eselect-emacs-1.1_alpha1.ebuild 723 RMD160 1ef1f56c563ca89273cc1af7c5ec176980c5389d SHA1 be07f36d7b4e4a9d6d4306fc888229f8355b7d42 SHA256 858001a88b2948ef387ad41d34c24bb75e148f7b6f7c16e315622b045689195f
-EBUILD eselect-emacs-1.1_alpha2.ebuild 723 RMD160 1ef1f56c563ca89273cc1af7c5ec176980c5389d SHA1 be07f36d7b4e4a9d6d4306fc888229f8355b7d42 SHA256 858001a88b2948ef387ad41d34c24bb75e148f7b6f7c16e315622b045689195f
-MISC ChangeLog 396 RMD160 0a17eb0f02d9708d487ec62ea559d3a82a3010c0 SHA1 c442a8d42077590c357988f45b5929bf1a1aa124 SHA256 4884d4d6d6eabd2134471daca1e7f8b12d4b92402aff4af756ab9f911809a917
+DIST eselect-emacs-1.1_beta1.tar.bz2 6189 RMD160 bd4725501197f4ece60db423a62993f05066b2c3 SHA1 1cab5eff755e00f99d68a37967b2354cb489307f SHA256 22eb334ec7e5a495587c2563a03c5fbc8bcd536990dc519875059ce992cfde9c
+EBUILD eselect-emacs-1.1_beta1.ebuild 762 RMD160 d50514dcdca16d7fc0eb27b1ca4b797a0fa07d94 SHA1 1c500e2a7753a2f853efb91851562861d286f254 SHA256 e8aa610807bba0e876643db16c5e321ce9a291c30db341b7eaa27040d88b271f
+MISC ChangeLog 607 RMD160 08c0fb900f7293275f5cc61d2a6caaa715604bb3 SHA1 0d355a7bf0ab26b265820ce8164a7ad13ff55971 SHA256 fcdcd1630f65c3b930a8f232b9a88b335e69b93e6dce478512079897e727dc22
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
