@@ -1,22 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-emacs/eselect-emacs-1.0.ebuild,v 1.1 2007/06/17 18:35:32 ulm Exp $
-
-DESCRIPTION="Manages Emacs and ctags symlinks"
-HOMEPAGE="http://www.gentoo.org/proj/en/lisp/emacs/"
-#SRC_URI="mirror://gentoo/${P}.tar.bz2"
-SRC_URI="http://dev.gentoo.org/~ulm/${P}.tar.bz2"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
-IUSE=""
-
-DEPEND=""
-RDEPEND=">=app-admin/eselect-1.0.10"
-
-src_install() {
-	insinto /usr/share/eselect/modules
-	doins *.eselect || die "doins failed"
-	doman *.eselect.5 || die "doman failed"
-}
