@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Jun 2007; Ulrich Mueller <ulm@gentoo.org>
+  -eselect-emacs-1.1_alpha1.ebuild, -eselect-emacs-1.1_alpha2.ebuild,
+  +eselect-emacs-1.1_beta1.ebuild:
+  Install upstream ChangeLog in doc. Remove old versions.
+
   23 Jun 2007; Ulrich Mueller <ulm@gentoo.org>
   +eselect-emacs-1.1_alpha2.ebuild:
   Version bump.
